# flowshift

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DATABRICKS_GUIDE.md  LICENSE  README.md  SECURITY.md  USER_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
demo/: demo_customers.csv  demo_pipeline.py  demo_pipeline.yaml  demo_sales.csv  sample_pipeline.yaml  sample_pipeline_pandas.yaml  sample_pipeline_spark.yaml
doc/: Developer.md  InOut.md  Join.md  Parse.md  Preparation.md  Transform.md
doc/adr/: 000-template.md  001-dual-backend-architecture.md  002-security-eval-removal.md  003-governance-spinoff.md
src/flowshift/: __init__.py  _config.py  _contracts.py  _pii.py  _validators.py  _version.py  convert.py  developer.py  in_out.py  join.py  parse.py  pipeline.py  preparation.py  transform.py
src/flowshift/engines/: __init__.py  base.py  pandas_engine.py  spark_engine.py
src/flowshift_governance/: __init__.py  contracts.py  pii.py  pyproject.toml
src/flowshift_governance/tests/: __init__.py  test_contracts.py  test_pii.py
tests/: conftest.py  test_assessment.py  test_contracts.py  test_convert.py  test_developer.py  test_engines.py  test_in_out.py  test_join.py  test_parse.py  test_pii.py  test_pipeline.py  test_preparation.py  test_spark_engine.py  test_transform.py
tests/fixtures/: sample_workflow.yxmd
