[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowshift"
dynamic = ["version"]
description = "Replicate visual ETL tools as independent Python functions — build ETL pipelines with pandas or PySpark using a familiar, declarative API."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Flowshift Contributors", email = "contributors@flowshift.org" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["flowshift", "pandas", "etl", "data-engineering", "pipeline", "dataframe"]

dependencies = [
    "pandas>=1.5.0,<3.0",
    "PyYAML>=6.0,<7.0",
    "pyarrow>=23.0.1,<25.0",
    "defusedxml>=0.7.0,<1.0",
]

[project.scripts]
flowshift = "flowshift.pipeline:cli_main"

[project.optional-dependencies]
spark = ["pyspark>=3.4.0,<4.0", "pyarrow>=23.0.1,<25.0"]
cloud = ["fsspec>=2023.1.0,<2026.0", "s3fs>=2023.1.0,<2026.0"]
all = ["pyspark>=3.4.0,<4.0", "pyarrow>=23.0.1,<25.0", "fsspec>=2023.1.0,<2026.0", "s3fs>=2023.1.0,<2026.0"]
dev = [
    "pytest>=9.0.3,<11.0",
    "pytest-cov>=4.0,<6.0",
    "ruff>=0.4.0,<1.0",
    "build>=1.0,<2.0",
    "twine>=5.0,<6.0",
]

[project.urls]
Homepage = "https://github.com/tonystark7cris/flowshift"
Documentation = "https://github.com/tonystark7cris/flowshift#readme"
Repository = "https://github.com/tonystark7cris/flowshift"
Issues = "https://github.com/tonystark7cris/flowshift/issues"
Changelog = "https://github.com/tonystark7cris/flowshift/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/flowshift/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/flowshift"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
