[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowshift-governance"
dynamic = ["version"]
description = "Enterprise data quality toolkit — PII detection & masking, schema contracts, statistical profiling, and audit suites."
readme = "README_GOVERNANCE.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nihal", email = "nihaltripathi6@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "data-quality", "pii", "gdpr", "hipaa", "schema-validation",
    "data-contracts", "profiling", "compliance", "pandas"
]

dependencies = [
    "pandas>=1.5.0,<3.0",
]

[project.urls]
Homepage = "https://github.com/tonystark7cris/flowshift"
Documentation = "https://github.com/tonystark7cris/flowshift#readme"
Repository = "https://github.com/tonystark7cris/flowshift"
Issues = "https://github.com/tonystark7cris/flowshift/issues"
Changelog = "https://github.com/tonystark7cris/flowshift/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "_version.py"

[tool.hatch.build.targets.wheel]
packages = ["."]
